install-ingress-nginx/ingress-k8sbfr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8sbfr.zapto.org
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /popote(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: popote/popote-service
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 80
