install-ingress-nginx/k8sbfr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8sbfr-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: k8sbfr-nginx
  rules:
  - http:
      paths:
      # - path: /popote(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: popote-service
      #       port:
      #         number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: k8sbfr-hello-node
            port:
              number: 80
